--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
+    "bench": "NODE_ENV=production node test/benchmark.js",
     "precommit": "lint-staged && npm run test"
   },
   "repository": {
@@ -31,12 +32,15 @@
   "author": "Chris Frank",
   "license": "MIT",
   "devDependencies": {
+    "benchmark": "^2.1.4",
     "husky": "^0.14.3",
     "jest": "^23.6.0",
+    "jsdom": "^12.0.0",
     "lint-staged": "^7.2.2",
     "prettier": "^1.14.2",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "styled-components": "^3.4.6"
   },
   "peerDependencies": {
     "react": ">= 15"
