--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "nanostyled",
   "version": "0.1.0",
-  "description": "Build props-controlled, CSS-in-JS-like components using just functional CSS. Pairs well with tachyons, tailwindcss, etc.",
-  "main": "dist/index.js",
+  "description": "CSS-in-JS-like React components, styled with just CSS",
+  "main": "index.js",
   "scripts": {
     "bench": "NODE_ENV=production node test/benchmark.js",
-    "build": "rollup -c",
-    "precommit": "npm run build && lint-staged && npm run test",
-    "test": "jest"
+    "precommit": "npm run test && lint-staged",
+    "test": "jasmine test/nanostyled.spec.js"
   },
   "repository": {
     "type": "git",
@@ -20,31 +19,29 @@
     ]
   },
   "keywords": [
-    "tachyons",
+    "react",
+    "CSS",
     "css-in-js",
     "styled-components",
     "atomic CSS",
     "utility css",
     "functional CSS",
-    "tailwind",
-    "react",
-    "CSS"
+    "tachyons",
+    "tailwind"
   ],
   "author": "Chris Frank",
   "license": "MIT",
   "devDependencies": {
-    "babel-preset-env": "^1.7.0",
     "benchmark": "^2.1.4",
     "husky": "^0.14.3",
+    "jasmine": "^3.2.0",
     "jest": "^23.6.0",
     "lint-staged": "^7.2.2",
-    "parcel-bundler": "^1.9.7",
+    "parcel-bundler": "^1.10.0",
     "prettier": "^1.14.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-test-renderer": "^16.5.1",
-    "rollup": "^0.65.2",
-    "rollup-plugin-babel": "^4.0.3",
     "styled-components": "^4.0.0-beta.4"
   },
   "peerDependencies": {
