--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nanostyled",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A < 1kb library for building styled React components, with CSS-in-JS-like APIs, without CSS in JS",
   "main": "index.js",
   "scripts": {
     "bench": "NODE_ENV=production node test/benchmark.js",
-    "precommit": "npm run test && lint-staged",
-    "test": "jasmine test/nanostyled.spec.js"
+    "build:example": "browserify example/_window.js > example/_browserified.js --ig",
+    "precommit": "npm run build:example && npm run test && lint-staged",
+    "test": "jasmine test/nanostyled.test.js"
   },
   "repository": {
     "type": "git",
@@ -33,11 +34,11 @@
   "license": "MIT",
   "devDependencies": {
     "benchmark": "^2.1.4",
+    "browserify": "^16.2.3",
     "husky": "^0.14.3",
     "jasmine": "^3.2.0",
     "jest": "^23.6.0",
     "lint-staged": "^7.2.2",
-    "parcel-bundler": "^1.10.0",
     "prettier": "^1.14.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
