--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "unpkg": "dist/nanostyled.umd.js",
   "scripts": {
     "bench": "NODE_ENV=production node test/benchmark.js",
-    "precommit": "npm run build && npm run test && lint-staged",
+    "precommit": "npm run build && npm run test && pretty-quick --staged",
     "test": "jasmine test/nanostyled.test.js",
     "build:umd": "rollup index.js --file dist/nanostyled.umd.js --format umd --name nanostyled",
     "build:cjs": "rollup index.js --file dist/nanostyled.cjs.js --format cjs",
@@ -15,12 +15,6 @@
   "repository": {
     "type": "git",
     "url": "https://www.github.com/chrisfrank/nanostyled"
-  },
-  "lint-staged": {
-    "{index.js,README.md,test/*.js}": [
-      "prettier --single-quote --write --trailing-comma es5",
-      "git add"
-    ]
   },
   "keywords": [
     "react",
@@ -37,13 +31,11 @@
   "license": "MIT",
   "devDependencies": {
     "benchmark": "^2.1.4",
-    "browserify": "^16.2.3",
-    "browserify-shim": "^3.8.14",
     "husky": "^0.14.3",
     "jasmine": "^3.2.0",
     "jest": "^23.6.0",
-    "lint-staged": "^7.2.2",
-    "prettier": "^1.14.2",
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.7.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-test-renderer": "^16.5.1",
@@ -52,5 +44,10 @@
   },
   "peerDependencies": {
     "react": ">= 15"
+  },
+  "prettier": {
+    "proseWrap": "always",
+    "singleQuote": true,
+    "trailingComma": "es5"
   }
 }
